ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

2008-03-02 Benedikt Heintel
	- SETUP:
		* Fixed #317: missing "named.caching-nameserver.conf" during the installation
	- ENGINE:
		* Fixed #824: IMAP SSL Traffic not counted

2008-03-01 Benedikt Heintel
	- DOCS:
		* Updated all Docs. Some are still with ToDo
	- ENGINE:
		* Fixed #1070: FreeBSD, ispcp-setup uses group which does not exist
	- LANGUAGES:
		* Updated all languages
	- SETUP:
		* Inproved: Update SQL with IGNORE statement
		* Maybe fixed #946; ispcp-setup mysql password error
	- TOOLS:
		* Update PHPmyAdmin to version 2.11.5
	- DISTS:
		* Updated all distributions
		* Dropped support of Suse Enterprise Linux Server (SELS) - Please use OpenSuse files

2008-02-28 Benedikt Heintel
	- CONFIGS:
		* Fixed: www.domain.com/pma/ redirects with double "/"

2008-02-27 Benedikt Heintel
	- LANGUAGES:
		* Updated: Polish

2008-02-26 Benedikt Heintel
	- SETUP:
		* Fixed #939: Installation Error on Ubuntu Dapper 6.06.1 LTS
		* Fixed #1069: Permission script engine/setup/set-engine-permissions.sh dont work if vu2000 has changed
	- TOOLS:
		* Fixed #480: creating a folder as subfolder "[none]" doesn't work

2008-02-26 Jochen Manz
	- SETUP:
		* Corrected the DATABASE_REVISION entry which is inserted when installing ispcp

2008-02-26 Christian Hernmarck
	- GUI:
		* Added DB update function for mail_addr field (_databaseUpdate_2)
		* Fixed #871: Small CSS error in Webmail (again...)

2008-02-25 Christian Hernmarck
	- GUI:
		* Fixed #747: "mail_addr" -> now also fill for catchall

2008-02-25 Christian Hernmarck
	- GUI:
		* Fixed #1052: postmaster email not created

2008-02-25 Benedikt Heintel
	- CONFIGS:
		* Fixed #994: open_basedir settings: mod-php != php-fastcgi
	- SETUP:
		* Fixed #792: (ubuntu) errors in make

2008-02-25 Christian Hernmarck
	- GUI:
		* Fixed #747: use of unused field mail_addr in table mail_users
		* Fixed #1047: alias emails not deleted
		* Fixed #1068: Patch to fix icon position in WebFTP